COMMERCE-2095 fixed wrong spacing rules on product cards

--- a/commerce-theme-minium/commerce-theme-minium/src/css/minium/components/price.scss
+++ b/commerce-theme-minium/commerce-theme-minium/src/css/minium/components/price.scss
@@ -21,5 +21,9 @@
 			font-weight: normal;
 			text-decoration: line-through;
 		}
+
+		&:last-child {
+			margin-right: 0;
+		}
 	}
 }
